--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}VK-parser{% endblock %}</title>
+    <title>{% block title %}TG-parser{% endblock %}</title>
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
     <link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     {% block scripts %}{% endblock %}
