--- a/templates/includes/menu.html
+++ b/templates/includes/menu.html
@@ -1,6 +1,6 @@
 <div class="left_bar">
     <div class="site_brand">
-        <a class="vert_menu_link" href="/">TG-client</a>
+        <a class="vert_menu_link" href="/">TG Parser</a>
     </div>
     <ul class="vert_menu">
         <li class="vert_menu_item">
@@ -16,7 +16,7 @@
             <a class="vert_menu_link {% if menu == 4 %}menu_current{% endif %}" href="/log/">Logs</a>
         </li>
         <li class="vert_menu_item">
-            <a class="vert_menu_link" href="/admin/" target="_blank">Admin panel</a>
+            <a class="vert_menu_link" href="/admin/" target="_blank">Admin Panel</a>
         </li>
     </ul>
 </div>
