--- a/templates/log.html
+++ b/templates/log.html
@@ -9,7 +9,7 @@
     <form class="change_form" method="post">
         {% csrf_token %}
         <div>
-            <button type="submit" class="action_button" name="action" value="delete">Clean</button>
+            <button type="submit" class="action_button" name="action" value="delete">Clear</button>
         </div>
     </form>
 {% endblock %}
