remove old migrations

--- a/templates/tg_group_list.html
+++ b/templates/tg_group_list.html
@@ -47,7 +47,7 @@
         </table>
         </div>
         <div class="footer">
-            <label class="input_field">Link: <input name="group_name"></label>
+            <label class="input_field">Link: <input class="w400" name="group_name"></label>
             <button type="submit" class="action_button" name="add_group" value="1">Add group</button>
         </div>
     </form>
